Moved money-transfer-component to separate repo

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-top-bar/tpa-top-bar.html">
 <link rel="import" href="../bower_components/tpa-nav-bar/tpa-nav-bar.html">
 
-<link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
+<link rel="import" href="../bower_components/tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="../bower_components/tpa-transaction-list/tpa-transaction-list.html">
 <link rel="import" href="../bower_components/tpa-region-selection/tpa-region-selection.html">
 <link rel="import" href="../bower_components/tpa-i18n/tpa-i18n.html">
