lazy loading the home landing page content

--- a/app/elements/tpa-app-layout/tpa-app-layout.html
+++ b/app/elements/tpa-app-layout/tpa-app-layout.html
@@ -1,5 +1,11 @@
+<link rel="import" href="../../bower_components/tpa-money-transfer/tpa-money-transfer.html">
+<link rel="import" href="../../bower_components/tpa-transaction-list/tpa-transaction-list.html">
+<link rel="import" href="../../bower_components/tpa-mortgage-calculation/tpa-mortgage-calculation.html">
+<link rel="import" href="../../bower_components/tpa-dashboard/tpa-dashboard-data.html">
+
 <dom-module id="tpa-app-layout">
     <template>
+        <tpa-dashboard-data></tpa-dashboard-data>
         <style include="shared-styles iron-flex iron-flex-alignment">
             .layout {
                 margin-bottom: 20px;
