--- a/app/elements/tpa-pages/tpa-settings-page.html
+++ b/app/elements/tpa-pages/tpa-settings-page.html
@@ -1,8 +1,9 @@
+<link rel="import" href="../../bower_components/tpa-region-selection/tpa-region-selection.html">
 <dom-module id="tpa-settings-page">
     <template>
       <paper-material elevation="1">
         <h1 class="page-title focus-target" tabindex="-1">Settings page</h1>
-        <p>Settings Page</p>
+        <tpa-region-selection></tpa-region-selection>
       </paper-material>
     </template>
     <script>
