--- a/app/elements/tpa-pages/tpa-contact-page.html
+++ b/app/elements/tpa-pages/tpa-contact-page.html
@@ -1,3 +1,5 @@
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <dom-module id="tpa-contact-page">
     <template>
       <paper-material elevation="1">
