--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -35,6 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-i18n/tpa-i18n.html">
 <link rel="import" href="tpa-app-layout/tpa-app-layout.html">
 <link rel="import" href="../bower_components/tpa-dashboard/tpa-dashboard-data.html">
+<link rel="import" href="tpa-bootstrap-data/tpa-bootstrap-data.html">
 <link rel="import" href="../bower_components/tpa-globals/tpa-globals.html">
 <link rel="import" href="../bower_components/tpa-mortgage-calculation/tpa-mortgage-calculation.html">
 
