--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div main>
         <tpa-dashboard-data></tpa-dashboard-data>
+        <tpa-bootstrap-data></tpa-bootstrap-data>
         <app-header-layout has-scrolling-region>
           <app-header reveals>
             <tpa-top-bar class="paper-header"></tpa-top-bar>
