updated markup in index and tpa-app-layout. increased indent to 4

--- a/app/elements/tpa-app-layout/tpa-app-layout.html
+++ b/app/elements/tpa-app-layout/tpa-app-layout.html
@@ -29,15 +29,15 @@
                                     account-balance="5000"></tpa-money-transfer>
                 </paper-card>
 
-                <paper-card>
-                  <tpa-transaction-list hide-sub-text title="Latest Transactions"></tpa-transaction-list>
+                <paper-card heading="Latest Transactions">
+                  <tpa-transaction-list></tpa-transaction-list>
                 </paper-card>
 
                 <paper-card heading="Accounts">
                   <tpa-transaction-list hide-icon group-title-field="accountType"></tpa-transaction-list>
                 </paper-card>
 
-                    <paper-card>
+                    <paper-card heading="Mortgage calculation">
                         <tpa-mortgage-calculation></tpa-mortgage-calculation>
                     </paper-card>
 
