--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -33,9 +33,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-transaction-list/tpa-transaction-list.html">
 <link rel="import" href="../bower_components/tpa-region-selection/tpa-region-selection.html">
 <link rel="import" href="../bower_components/tpa-i18n/tpa-i18n.html">
+<link rel="import" href="../bower_components/tpa-ajax/tpa-ajax.html">
 <link rel="import" href="tpa-app-layout/tpa-app-layout.html">
 <link rel="import" href="../bower_components/tpa-dashboard/tpa-dashboard-data.html">
-<link rel="import" href="tpa-bootstrap-data/tpa-bootstrap-data.html">
 <link rel="import" href="../bower_components/tpa-globals/tpa-globals.html">
 <link rel="import" href="../bower_components/tpa-mortgage-calculation/tpa-mortgage-calculation.html">
 
