App scroll effect include

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -42,6 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
+<link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
 
 <!-- Add your elements here -->
 <link rel="import" href="../bower_components/tpa-styles/app-theme.html">
