--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="elements/elements.html">
 
     <!-- For shared styles, shared-styles.html import in elements.html -->
-    <style is="custom-style" include="shared-styles"></style>
+    <style is="custom-style" include="shared-styles">
+    </style>
 </head>
 
 <body unresolved>
@@ -179,12 +180,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                  duration="6000"
                  text="Caching complete! This app will work offline.">
     </paper-toast>
+    <paper-toast id="cache-updated"
+                 duration="10000"
+                 text="A new version of this app is available.">
+                 <a href="javascript:history.go(0);" style="color: #ff9933; text-decoration: none;">REFRESH</a>
+    </paper-toast>
 
     <platinum-sw-register auto-register
                           clients-claim
                           skip-waiting
                           base-uri="bower_components/platinum-sw/bootstrap"
-                          on-service-worker-installed="displayInstalledToast">
+                          on-service-worker-installed="displayInstalledToast"
+                          on-service-worker-updated="displayUpdatedToast">
         <platinum-sw-cache default-cache-strategy="fastest"
                            cache-config-file="cache-config.json">
         </platinum-sw-cache>
