--- a/app/elements/tpa-app-layout/tpa-app-layout.html
+++ b/app/elements/tpa-app-layout/tpa-app-layout.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../../bower_components/tpa-transaction-list/tpa-transaction-list.html">
 <link rel="import" href="../../bower_components/tpa-mortgage-calculation/tpa-mortgage-calculation.html">
 <link rel="import" href="../../bower_components/tpa-dashboard/tpa-dashboard-data.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animation-runner-behavior.html">
 
 <dom-module id="tpa-app-layout">
     <template>
@@ -30,58 +32,22 @@
 
         </style>
         <div class="horizontal around-justified layout wrap">
-                <paper-card heading="Money Transfer">
+            <paper-card heading="Money Transfer">
                 <tpa-money-transfer class="focus-target" account-owner="John Smith" account-number="12359238450"
-                                    account-balance="5000"></tpa-money-transfer>
-                </paper-card>
+                                account-balance="5000"></tpa-money-transfer>
+            </paper-card>
 
-                <paper-card heading="Latest Transactions">
-                  <tpa-transaction-list></tpa-transaction-list>
-                </paper-card>
+            <paper-card heading="Latest Transactions">
+              <tpa-transaction-list></tpa-transaction-list>
+            </paper-card>
 
-                <paper-card heading="Accounts">
-                  <tpa-transaction-list hide-icon group-title-field="accountType"></tpa-transaction-list>
-                </paper-card>
+            <paper-card heading="Accounts">
+              <tpa-transaction-list hide-icon group-title-field="accountType"></tpa-transaction-list>
+            </paper-card>
 
-                    <paper-card heading="Mortgage calculation">
-                        <tpa-mortgage-calculation></tpa-mortgage-calculation>
-                    </paper-card>
-
-            <!--<paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>
-
-                <paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>
-
-                <paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>
-
-                <paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>
-
-                <paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>
-
-                <paper-card>
-                    <div class="card-content">
-                        <tpa-money-transfer account-owner="Dagobert Duck" account-number="ING 0126162 232" account-balance="2432.32"></tpa-money-transfer>
-                    </div>
-                </paper-card>-->
+            <paper-card heading="Mortgage calculation">
+                <tpa-mortgage-calculation></tpa-mortgage-calculation>
+            </paper-card>
         </div>
     </template>
     <script>
