experimenting with push notifications

--- a/app/index.html
+++ b/app/index.html
@@ -190,6 +190,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </platinum-sw-cache>
     </platinum-sw-register>
 
+    <platinum-push-messaging
+        title="Application updated"
+        message="The application was updated in the background"
+        icon-url="icon.png"
+        click-url="notification.html">
+    </platinum-push-messaging>
+
+    <script>
+         
+    </script>
 </template>
 
 <!-- build:js scripts/app.js -->
