--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,54 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <!-- For shared styles, shared-styles.html import in elements.html -->
     <style is="custom-style" include="shared-styles">
+
+        .flex-equal-justified {
+            justify-content:space-around;
+            display:flex;
+            flex-direction:row;
+            width:100%;
+        }
+
+        .flex-self-center {
+            display:flex;
+            flex-direction:row;
+        }
+
+        .flex-self-center.actions{
+            justify-content: flex-end;
+        }
+
+        .flex-equal-justified > div,
+        .flex-equal-justified > span{
+            width:33%;
+        }
+        .icon-ing-logo {
+            display: inherit;
+            text-align:left;
+            margin-left: -50px;
+        }
+
+        .icon-ing-logo iron-icon.ing-icon {
+            --iron-icon-height: 28px;
+            --iron-icon-width: 135px;
+            fill: #000066;
+            margin-left:-15px;
+            margin-top: 8px;
+            vertical-align: bottom;
+
+        }
+
+        @media all and (min-width: 0) and (max-width: 840px) {
+            .icon-ing-logo iron-icon.ing-icon {
+                display:none;
+            }
+        }
+        .icon-ing-logo iron-icon.lion-icon {
+            --iron-icon-height: 40px;
+            --iron-icon-width: 82px;
+            margin-left:-15px;
+        }
+
     </style>
 </head>
 
@@ -72,13 +120,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </tpa-globals>
 
 
-    <paper-drawer-panel id="paperDrawerPanel" responsive-width="840px" force-narrow>
+    <paper-drawer-panel id="paperDrawerPanel" responsive-width="840px">
         <!-- Drawer Scroll Header Panel -->
         <paper-scroll-header-panel drawer fixed>
 
             <!-- Drawer Toolbar -->
-            <paper-toolbar id="drawerToolbar">
-                <span class="menu-name">ING TPA Bootstrap</span>
+            <paper-toolbar id="drawerToolbar" style="box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);">
+              <span class="icon-ing-logo font-size-xh flex-child flex-self-center">
+                  <iron-icon class="ing-icon" icon="tpa:ing-logo-ing"></iron-icon>
+                  <iron-icon class="lion-icon primary" icon="tpa:ing-logo-lion"></iron-icon>
+              </span>
             </paper-toolbar>
 
             <!-- Drawer Content -->
@@ -95,9 +146,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div main>
             <tpa-ajax auto id="getBootstrapData" url="{{services.bootstrap}}" handle-as="json" last-response="{{bootstrapResponse}}"></tpa-ajax>
             <app-header-layout has-scrolling-region>
-                <app-header style="box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);" effects="material" reveals>
+                <app-header style="box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);" fixed>
+                    <paper-toolbar>
+
+                    </paper-toolbar>
+                    <!--
                     <tpa-top-bar class="paper-header"></tpa-top-bar>
                     <tpa-nav-bar base-url="{{baseUrl}}#/" tabs="[[bootstrapResponse.tabs]]"></tpa-nav-bar>
+                    -->
                 </app-header>
                 <!-- Main Content -->
                 <div class="content">
@@ -164,7 +220,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 <tpa-settings-page></tpa-settings-page>
                             </template>
                         </section>
-                        
+
                         <section data-route="feedback">
                             <template is="dom-if" if="{{isSelected(data.pageName, 'feedback')}}">
                                 <link rel="import" href="elements/tpa-pages/tpa-feedback-page.html">
