add tpa welcome

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -56,3 +56,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-font/tpa-font.html">
 <link rel="import" href="../bower_components/tpa-icons/tpa-icons.html">
 
+<link rel="import" href="./tpa-welcome/tpa-welcome.html">
+
