connect to reactive data

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -56,5 +56,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-font/tpa-font.html">
 <link rel="import" href="../bower_components/tpa-icons/tpa-icons.html">
 
+<link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-hub.html">
+<link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-transactions.html">
+<link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-products.html">
+<link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-user.html">
+
 <link rel="import" href="./tpa-welcome/tpa-welcome.html">
 
