moved app-layout to daily-banking

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,6 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-nav-bar/tpa-nav-bar.html">
 <link rel="import" href="../bower_components/tpa-i18n/tpa-i18n.html">
 <link rel="import" href="../bower_components/tpa-ajax/tpa-ajax.html">
+<link rel="import" href="../bower_components/tpa-daily-banking/tpa-daily-banking.html">
 <link rel="import" href="../bower_components/tpa-globals/tpa-globals.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
