removed daily banking from the elements and added it to lazy loading

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <neon-animated-pages id="mainPages" attr-for-selected="data-route" selected="{{data.pageName}}" fallback-selection="home" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
                         <section data-route="home">
                             <template is="dom-if" if="{{isSelected(data.pageName, 'home')}}">
+                                <link rel="import" href="bower_components/tpa-daily-banking/tpa-daily-banking.html">
                                 <tpa-daily-banking></tpa-daily-banking>
                             </template>
                         </section>
